--- a/app/src/main/res/values-ru-land/strings.xml
+++ b/app/src/main/res/values-ru-land/strings.xml
@@ -16,7 +16,7 @@
 
 <resources>
 
-    <string name="tb_window_size_half_left">Половина экрана (левая)</string>
-    <string name="tb_window_size_half_right">Половина экрана (правая)</string>
+    <string name="tb_window_size_half_left">1/2 экрана верх</string>
+    <string name="tb_window_size_half_right">1/2 экрана низ</string>
 
 </resources>
