--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
 
 <resources>
 
-    <string name="tb_app_name">Taskbar</string>
-    <string name="tb_app_name_debug">Taskbar (Debug)</string>
+    <string name="tb_app_name">TaskbarAtlas</string>
+    <string name="tb_app_name_debug">TaskbarAtlas (Debug)</string>
 
     <string name="tb_taskbar_is_active">Taskbar is active</string>
     <string name="tb_click_to_open_settings">Click to open settings</string>
@@ -162,6 +162,14 @@
     <string name="tb_window_size_half_left_alt">Half screen (left/top)</string>
     <string name="tb_window_size_half_right">@string/tb_window_size_half_right_alt</string>
     <string name="tb_window_size_half_right_alt">Half screen (right/bottom)</string>
+    <string name="tb_window_size_1_3_left">@string/tb_window_size_1_3_left_alt</string>
+    <string name="tb_window_size_1_3_left_alt">1/3 screen (left/top)</string>
+    <string name="tb_window_size_2_3_right">@string/tb_window_size_2_3_right_alt</string>
+    <string name="tb_window_size_2_3_right_alt">2/3 screen (right/bottom)</string>
+    <string name="tb_window_size_2_3_left">@string/tb_window_size_2_3_left_alt</string>
+    <string name="tb_window_size_2_3_left_alt">2/3 screen (left/top)</string>
+    <string name="tb_window_size_1_3_right">@string/tb_window_size_1_3_right_alt</string>
+    <string name="tb_window_size_1_3_right_alt">1/3 screen (right/bottom)</string>
 
     <string name="tb_pref_title_blacklist">Configure apps in start menu</string>
     <string name="tb_app_hidden">1 app hidden</string>
